# egloon_rule_hub

./: .gitignore  ATTRIBUTION.md  README.md  pyproject.toml
.github/workflows/: sync-feishu.yml  sync-rules.yml  validate.yml
Rule/Clash/AI/: AI.yaml  (+1 more)
Source/TXT/: AppleIntelligence.txt  ClaudeExtended.txt  Feishu.txt  README.md
catalog/: bundles.yaml  services.yaml  sources.yaml  supplements.yaml  targets.yaml
docs/: ARCHITECTURE.md  attribution.md  services.md  sources.md  usage.md
docs/plans/: 2026-07-12-surfboard-singbox-targets.md
docs/services/: Apple.md  China.md  ChinaDNS.md  ChinaIPs.md  ChinaIPsBGP.md  ChinaMax.md  Claude.md  Cloudflare.md  Copilot.md  Duolingo.md  EA.md  ESPN.md  Emby.md  FOXNOW.md  FOXPlus.md  Facebook.md  Fox.md  Gemini.md  GitHub.md  Google.md  GoogleEarth.md  GoogleSearch.md  GoogleVoice.md  HBO.md  HBOAsia.md  HBOHK.md  HBOUSA.md  Instagram.md  Linux.md  Netflix.md  Nintendo.md  Nvidia.md  OpenAI.md  PayPal.md  PikPak.md  Proxy.md  Rakuten.md  Reddit.md  Shopee.md  Shopify.md  (+21 more)
overrides/services/: OpenAI.yaml
src/egloon_rule_hub/: __init__.py  __main__.py  build.py  cli.py
src/egloon_rule_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_derived_targets.py  test_feishu_source.py  test_supplements.py  test_target_emitters.py  test_target_integration.py
tests/test_build/: __init__.py  test_build.py
tests/test_cli/: test_cli.py
tests/test_emitters/: __init__.py  test_emitters.py
tests/test_normalize/: __init__.py  test_catalog.py
tests/test_parsers/: test_parsers.py
(+1510 files in other folders)
